--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,115 @@
     font-family: 'Roboto', sans-serif;
     color: inherit;
 }
+
+/* 
+header */
+
+header {
+    background: rgba(255, 144, 14, 0.10);
+    padding: 30px 160px;
+}
+img {
+    max-width: 100%;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+}
+nav > ul {
+    display: flex;
+}
+
+nav li {
+    font-size: 20px;
+    margin-right: 30px;
+}
+nav li a {
+    color:#5d5c5c;
+}
+
+.logo {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #131313;
+}
+
+.button {
+    padding: 12px 18px;
+    border-radius: 8px;
+    background: #FF900E;
+    border: none;
+    color: white;
+}
+
+.banner .banner-info {
+    text-align: center;
+}
+.banner .banner-info h1 {
+    padding: 20px 0;
+}
+.banner .banner-info p {
+    padding: 10px 0;
+}
+.banner .banner-info button {
+    margin: 20px 0;
+}
+
+main {
+    max-width: 1200px;
+    margin: auto;
+}
+
+/* media-quaries */
+
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px 0;
+    }
+    nav {
+        flex-direction: column;
+      
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header {
+        padding: 40px 0;
+    }
+    nav {
+        flex-direction: column;
+      
+    }
+}
+
+/* .section-two */
+
+.team-container {
+    display: flex;
+    align-items: center;
+}
+.team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.team-content {
+    padding-right: 60px;
+    padding-left: 60px;
+}
+.team-content h1 {
+    font-size: 2rem;
+    padding: 10px 0;
+}
+.team-content p {
+    font-size: 1rem;
+    padding: 10px 0;
+}
+
+
+.team-content h1 span {
+    color: #FF900E;
+}
